[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]

[node name="Main" type="Node"]
script = ExtResource("1")

[node name="LevelRoot" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TitleUI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TitlePanel" type="ColorRect" parent="CanvasLayer/TitleUI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.6)

[node name="TitleLabel" type="Label" parent="CanvasLayer/TitleUI"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
text = "PRINCE OF OLIVER\n\nOliver descends into the dungeon to rescue Princess Sofia.\nThe gates are locked, the shadows hide a guard...\n\nPress Space to start."
vertical_alignment = 1
horizontal_alignment = 1
autowrap_mode = 2

[node name="EndUI" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="EndPanel" type="ColorRect" parent="CanvasLayer/EndUI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.6)

[node name="EndLabel" type="Label" parent="CanvasLayer/EndUI"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
text = "Sofia is safe.\n\nMade for Oliver & Sofia.\n\nPress Space to return."
vertical_alignment = 1
horizontal_alignment = 1
autowrap_mode = 2
